Fixes the footeroverlap issue

--- a/src/components/footer/Footer.less
+++ b/src/components/footer/Footer.less
@@ -7,11 +7,16 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 4%;
+    display: block;
+    padding: 1.5%;
     width: 100%;
 
     button{
         color:white;
         font-size: 0.7rem;
     }
+
+    
 }
+
+
