--- a/src/components/table/Table.less
+++ b/src/components/table/Table.less
@@ -5,6 +5,7 @@
     background: @navLysGra;
 
     width: 100%;
+    margin-bottom: 5.5rem; //avstand til bunnen av tabellen for å hindre overlapp i header og tabellfelter
 
     th{
         text-align: center;
